src/test/deca/syntax/invalid/obtained_res/initNomNonValidesynt.res
./src/test/deca/syntax/invalid/created/testInitVar/initNomNonValide.deca:10:8: no viable alternative at input 'false'
